generate python api client and improve openapi schemas
